prover-ray/zkcdriver/testdata/synced/invalid/basic_25.zkc
//error:2:13-17:unknown type alias
type my_t = uint
type other_t = my_t

fn f(x:other_t, y:u32) -> (r:u32) {
  r = x + y
}
